force-app/main/default/objects/ACME_LeadScoringMetric__c/ACME_LeadScoringMetric__c.object-meta.xml
<CustomObject>
    <label>Lead Scoring Metric</label>
    <pluralLabel>Lead Scoring Metrics</pluralLabel>
    <nameField>
        <label>Lead Scoring Metric Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>