force-app/main/default/objects/ACME_LeadScoringMetric__c/fields/DemographicPoints__c.field-meta.xml
<CustomField>
    <fullName>DemographicPoints__c</fullName>
    <label>Demographic Points</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>