force-app/main/default/objects/ACME_LeadScoringMetric__c/fields/EngagementPoints__c.field-meta.xml
<CustomField>
    <fullName>EngagementPoints__c</fullName>
    <label>Engagement Points</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>