force-app/main/default/objects/ACME_LeadScoringMetric__c/fields/LastCalculatedDate__c.field-meta.xml
<CustomField>
    <fullName>LastCalculatedDate__c</fullName>
    <label>Last Calculated Date</label>
    <type>DateTime</type>
</CustomField>