force-app/main/default/objects/ACME_LeadScoringMetric__c/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Scoring Metrics</relationshipLabel>
    <relationshipName>LeadScoringMetrics</relationshipName>
    <type>Lookup</type>
</CustomField>