force-app/main/default/objects/ACME_LeadScoringMetric__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <minValue>0</minValue>
    <maxValue>100</maxValue>
</CustomField>